# bee-api

./: Cargo.toml  Dockerfile  NOTES.md
src/: main.rs  models.rs  routes.rs
src/models/: api_error.rs  context.rs  puzzle.rs  save.rs  user.rs
src/routes/: mod.rs  openapi.rs  puzzle.rs
